amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-provides.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/inexistent-provides.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'Product'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-provides.graphql#/declares/shape/Review/property/property/product/unresolved
  Property: 
  Range: [(3,13)-(3,20)]
  Location: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-provides.graphql

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Cannot obtain property name from type null when resolving fieldSet
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-provides.graphql#/declares/shape/Review/property/property/product
  Property: 
  Range: [(3,40)-(3,44)]
  Location: 
